# wasmib

./: .gitignore  Cargo.toml  LICENSE  Makefile
crates/wasmib-core/: Cargo.toml
crates/wasmib-core/src/: lib.rs
crates/wasmib-core/src/ast/: common.rs  definition.rs  mod.rs  module.rs  oid.rs  syntax.rs
crates/wasmib-core/src/hir/: base_modules.rs  definition.rs  lower.rs  mod.rs  module.rs  normalize.rs  syntax.rs  types.rs
crates/wasmib-core/src/lexer/: keyword.rs  mod.rs  token.rs
crates/wasmib-core/src/model/: ids.rs  interner.rs  mod.rs  module.rs  node.rs  object.rs  oid.rs  types.rs
crates/wasmib-core/src/module/: base_modules.rs  definition.rs  lower.rs  mod.rs  module.rs  syntax.rs  types.rs
crates/wasmib-core/src/parser/: mod.rs
crates/wasmib-core/src/resolver/: context.rs  mod.rs  tracing.rs
crates/wasmib-core/src/resolver/builtins/: macros.rs  mod.rs  modules.rs  oid.rs  tc.rs  types.rs
crates/wasmib-core/src/resolver/phases/: dedup.rs  imports.rs  mod.rs  oids.rs  registration.rs  semantics.rs  types.rs
crates/wasmib-core/tests/: integration.rs
crates/wasmib-std/: Cargo.toml
crates/wasmib-std/src/: cache.rs  lib.rs
crates/wasmib-wasm/: Cargo.toml  build.rs
crates/wasmib-wasm/src/: cache.rs  ffi.rs  lib.rs  serialize.rs
proto/: wasmib.proto
wasmib-go/: README.md  deserialize.go  doc.go  example_test.go  format.go  format_test.go  go.mod  go.sum  index.go  index_test.go  integration_test.go  model.go  types.go  validation_test.go  wasm.go  wasmib.go  wasmib_test.go
wasmib-go/embed/: wasmib.wasm  wasmib_wasm.wasm
wasmib-go/proto/: wasmib.pb.go
wasmib-go/testdata/: RFC-1212  RFC-1215
