[package]
name = "wasmib-core"
version = "0.1.0"
description = "Core MIB parser library - no_std, IO-free, WASM-portable"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
tracing = []

[dependencies]

[lints]
workspace = true
