[package]
name = "wasmib-std"
version = "0.1.0"
description = "Filesystem loader and CLI utilities for wasmib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["wasmib-core/tracing"]
dhat-heap = ["dep:dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
wasmib-core = { path = "../wasmib-core", default-features = false, features = ["std", "serde"] }
rayon = "1.10"
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
