[package]
name = "wasmib-std"
version = "0.1.0"
description = "Filesystem loader and CLI utilities for wasmib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["wasmib-core/tracing"]
dhat-heap = ["dep:dhat"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dhat = { version = "0.3", optional = true }
wasmib-core = { path = "../wasmib-core", default-features = false, features = ["std", "serde"] }
wasmib-wasm = { path = "../wasmib-wasm", features = ["std"] }
rayon = "1.10"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
