[package]
name = "wasmib-wasm"
version = "0.1.0"
description = "WASM FFI boundary and serialization for wasmib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
std = ["wasmib-core/std", "micropb/std"]

[dependencies]
wasmib-core = { path = "../wasmib-core", default-features = false }
micropb = { version = "0.6", default-features = false, features = ["encode", "decode", "alloc", "enable-64bit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
talc = { version = "4", default-features = false, features = ["lock_api"] }

[dev-dependencies]
# Enable std for tests
wasmib-core = { path = "../wasmib-core", features = ["std"] }

[build-dependencies]
micropb-gen = "0.6"

[lints]
workspace = true
